--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -98,7 +98,7 @@
 		<br/><br/><br/><br/>
 		<div class="row center margin_top_10 margin_right_30 font10">
 			<br/><br/>
-			Mission Andina - <a href="{{ path('fos_user_security_login') }}" class="no_style_a">TOUS DROITS RESERVES</a> © 2015
+			Mission Andina - <a href="{{ path('ma_user_homepage') }}" class="no_style_a">TOUS DROITS RESERVES</a> © 2015
 		</div>
 
 	</div>
