--- a/app/Resources/views/includes/button_to_top.html.twig
+++ b/app/Resources/views/includes/button_to_top.html.twig
@@ -1,6 +1,6 @@
 <!-- Button to top -->
 
-<div id="button_to_top" class="opacity0">
+<div id="button_to_top" class="opacity0 hidden-xs">
 	<a href="#accueil" style="no_style_a">
 		<button class="btn btn-to-top">
 			<img src="{{ asset('img/system/defaults/up_arrow.png') }}" alt="" class="btn_up_arrow"/>
