--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -142,27 +142,29 @@ h2
 }
 @media (min-width: 901px) {
 	h2 {
-		font-size: 2em;
+		font-size: 4em;
 	}
 }
 @media (max-width: 900px) {
 	h2 {
-		font-size: 1.2em;
+		font-size: 2em;
 	}
 }
 
 h3
-{	
+{
+	margin-top: 10px !important;
+	text-align: center;	
 	color: rgba(12,28,57,1)
 }
 @media (min-width: 901px) {
 	h3 {
-		font-size: 1.5em;
+		font-size: 2.5em;
 	}
 }
 @media (max-width: 900px) {
 	h3 {
-		font-size: 1em;
+		font-size: 1.3em;
 	}
 }
 
@@ -732,9 +734,32 @@ hr {
 	color: white !important;
 }
 .section {
+	margin: 0;
 	background-color: #f1f1f1;
-	padding: 50px !important;
+	padding-top: 50px !important;
 	z-index: 0 !important;
+}
+
+.slide_container {
+	overflow: hidden;
+	position:absolute;
+    left:0px;
+}
+.slide_container_content {
+	height: 100%;
+}
+.slide {
+	padding-top: 0 !important;
+    margin: 0 !important;
+    display: inline-block !important;
+}
+.slide_content {
+	width: 100%;
+	height: 100%;
+	padding-top: 0 !important;
+	margin: 0 !important;
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
 #sessionFlash {
@@ -770,15 +795,13 @@ hr {
 }
 
 .div-btn-btm-accueil {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	width: 100%;
-	margin: auto;
-	text-align: center;
 }
 .btn-accueil {
-	margin-left: 3%;
-	margin-right: 3%;
+	margin-left: 4%;
+	margin-right: 4%;
 	width: 15%;
 	text-align: center;
 	color: white;
