--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -417,9 +417,11 @@ strong {
 	margin-top: 0;
 	margin-bottom: 0;
 }
-.col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
-	padding: 2px;
-	margin: 0;
+@media (max-width: 767px) {
+	.col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
+		padding: 2px;
+		margin: 0;
+	}
 }
 .inline_div {
 	display: inline-block;
