--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -910,13 +910,12 @@ hr {
 }
 
 .slide_container {
-	overflow: hidden;
 	position:absolute;
     left:0px;
 }
-.slide_container_content {
+/*.slide_container_content {
 	height: 100%;
-}
+}*/
 .slide {
 	padding-top: 0 !important;
     margin: 0 !important;
@@ -924,10 +923,7 @@ hr {
     vertical-align: top;
 }
 .slide_content {
-	height: 100%;
 	padding-top: 0 !important;
-	overflow-x: hidden;
-	overflow-y: scroll;
 	vertical-align: top;
 }
 @media (min-width: 1400px) {
